--- a/src/Microsoft.DotNet.Web.Spa.ProjectTemplates/content/Mithril-CSharp/ClientApp/package.json
+++ b/src/Microsoft.DotNet.Web.Spa.ProjectTemplates/content/Mithril-CSharp/ClientApp/package.json
@@ -3,18 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "mithril": "^1.1.6",
+    "bootstrap": "^3.3.7",    
     "rimraf": "^2.6.2"
+  },
+  "devDependencies": {
+    "webpack": "^4.8.3",
+    "webpack-cli":"^2.1.3"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
